--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client": "npm start --prefix client",
     "server": "nodemon app.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "start": "node server.js",
+    "start": "node app.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "author": "Hernan",
