--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sagima-web",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Sagima web",
   "main": "app.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.10"
   }
 }
