--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Sagima web",
   "main": "app.js",
   "scripts": {
-    "client": "npm start --prefix client",
-    "server": "nodemon app.js",
+    "client": "npm start --prefix src/client",
+    "server": "nodemon src/app.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "start": "node app.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
@@ -16,7 +16,12 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.5"
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -29,12 +34,12 @@
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.10",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.1.0"
   }
 }
