--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sagima-web",
   "version": "0.1.7",
   "description": "Sagima web",
+  "proxy": "http://localhost:5000",
   "main": "app.js",
   "scripts": {
     "start": "node src/server/index.js",
@@ -29,6 +30,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.1",
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.4",
@@ -37,6 +39,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.7",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
@@ -44,6 +47,7 @@
     "react-toastify": "^7.0.4",
     "styled-components": "^5.1.0",
     "titlecase": "^1.1.3",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "browserslist": {
