--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon src/server",
     "client": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "run:server": "concurrently --kill-others-on-fail \"npm run start\" \"npm run build\""
   },
   "author": "Hernan",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "dependencies": {
+    "concurrently": "^5.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
